possible fix for stretched images on mobile

--- a/style.scss
+++ b/style.scss
@@ -156,6 +156,7 @@ h1  {
 
 img {
     width: 25%;
+    height: auto;
     border: 4px solid black;
 }
 
